[gd_scene load_steps=2 format=3 uid="uid://dkm8qp2vxn5ty"]

[ext_resource type="Script" path="res://scripts/menus/options_menu.gd" id="1_options"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.118, 0.129, 0.18, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Options"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_vertical = 4
value = 100.0

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_vertical = 4
value = 100.0

[node name="SFXVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_vertical = 4
value = 100.0

[node name="Fullscreen" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Fullscreen"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Fullscreen"

[node name="FullscreenCheck" type="CheckBox" parent="VBoxContainer/Fullscreen"]
layout_mode = 2
button_pressed = true

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"

[connection signal="value_changed" from="VBoxContainer/MasterVolume/MasterSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolume/MusicSlider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXVolume/SFXSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="toggled" from="VBoxContainer/Fullscreen/FullscreenCheck" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_pressed"]
